# mycc

./: .gitignore  CLAUDE.md  README.md  plan.md  sync.bat  sync.sh  sync_config.py  test_sync_config.py
tools/linter/cclinter/: .cclinter.yaml  Cargo.toml
tools/linter/cclinter-rs/: Cargo.toml
tools/linter/cclinter-rs/src/: cleanse.rs  config.rs  error.rs  file_info.rs  filter.rs  fix.rs  function_state.rs  headers.rs  include_state.rs  lib.rs  lint_context.rs  main.rs  nesting.rs  output.rs
tools/linter/cclinter-rs/src/checks/: build.rs  extensions.rs  legal.rs  mod.rs  readability.rs  runtime.rs  utils.rs  whitespace.rs
tools/linter/cclinter/src/: cli.rs  config.rs  ignore.rs  lib.rs  main.rs
tools/linter/cclinter/src/analyzer/: basic.rs  deep.rs  mod.rs  strict.rs
tools/linter/cclinter/src/checker/: complexity.rs  forward_decl.rs  include_guard.rs  magic_number.rs  mod.rs  naming.rs  prohibited.rs  unused.rs
tools/linter/cclinter/src/common/: diag.rs  mod.rs  rule.rs  source.rs  string_utils.rs
tools/linter/cclinter/src/formatter/: alignment.rs  blank_lines.rs  braces.rs  comments.rs  encoding.rs  include_sort.rs  indent.rs  line_length.rs  mod.rs  pointer_style.rs  spacing.rs  switch_indent.rs
tools/linter/cclinter/tests/: analyzer_tests.rs  checker_integration_tests.rs  checker_tests.rs  cli_mode_tests.rs  complexity_tests.rs  config_tests.rs  diag_tests.rs  formatter_tests.rs  forward_decl_tests.rs  ignore_tests.rs  include_guard_tests.rs  integration_tests.rs  magic_number_tests.rs  naming_tests.rs  prohibited_tests.rs  snapshot_tests.rs  unused_tests.rs
tools/linter/cclinter/tests/common/: mod.rs
tools/linter/cclinter/tests/fixtures/: analysis_test.c
tools/linter/pylinter/: .pylinter.yaml  Cargo.toml
tools/linter/pylinter/src/: cli.rs  config.rs  ignore.rs  lib.rs  main.rs
tools/linter/pylinter/src/analyzer/: basic.rs  deep.rs  (+2 more)
tools/linter/pylinter/tests/: analyzer_tests.rs  checker_tests.rs  cli_mode_tests.rs  cst_tests.rs  formatter_tests.rs  integration_tests.rs
tools/vcs-blame/: Cargo.toml
tools/vcs-blame/src/: cli.rs  config.rs  main.rs
tools/vcs-blame/src/parser/: mod.rs  traceback_cpp.rs
tools/vcs-blame/src/reporter/: html.rs  json.rs  markdown.rs  mod.rs
tools/vcs-blame/src/vcs/: git.rs  mod.rs
tools/vcs-blame/tests/: integration_tests.rs
(+232 files in other folders)
