[package]
name = "vcs-blame"
version = "0.1.0"
edition = "2021"
description = "Blame tool: git/svn blame with traceback/diff parsing and smart aggregation"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
chrono = "0.4"
colored = "2"

[dev-dependencies]
tempfile = "3"
