[package]
name = "cclinter-rs"
version = "0.1.0"
edition = "2021"
description = "Static code checker for C/C++ (cpplint Rust port)"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
quick-xml = "0.37"
walkdir = "2"
globset = "0.4"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
