[package]
name = "pylinter"
version = "0.1.0"
edition = "2021"
description = "Python 3.12+ linter: format + style check + static analysis"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
rayon = "1"
walkdir = "2"
globset = "0.4"
colored = "2"
similar = "2"
rustpython-parser = "0.3"

[dev-dependencies]
tempfile = "3"
